devlake/mariaDB/EN-PRO/devlake_v2/gw-route-http-redir.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: devlake-redirect
  namespace: devlake
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system
      sectionName: http-all
  hostnames:
    - devlake.nuamexchange.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
